# asterism

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  rust-toolchain.toml
.cargo/: config.toml
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-ide.yml  ci-release.yml  ci-rust.yml
docs/: Architecture.md  Phase-0-Tasks.md  Phase-1-Tasks.md  Phase-2-Tasks.md  Requirements.md  Roadmap.md  Solution.md
engine/aster-asset/: Cargo.toml
engine/aster-asset/src/: asset_manager.rs  cache.rs  error.rs  lib.rs  loader.rs
engine/aster-audio/: Cargo.toml
engine/aster-audio/examples/: gen_test_audio.rs
engine/aster-audio/src/: audio_system.rs  error.rs  lib.rs  snapshot.rs
engine/aster-audio/tests/: integration_test.rs
engine/aster-compiler/: Cargo.toml
engine/aster-compiler/examples/: compile_game.rs  compile_prologue.rs
engine/aster-compiler/src/: bytecode.rs  compiler.rs  error.rs  game_compiler.rs  ir.rs  lib.rs  optimizer.rs
engine/aster-core/: Cargo.toml
engine/aster-core/src/: asset.rs  build_config.rs  character.rs  expr.rs  game.rs  lib.rs  project.rs  save.rs  scene.rs  variable.rs
engine/aster-parser/: Cargo.toml
engine/aster-parser/src/: error.rs  grammar.pest  lib.rs  parser.rs
engine/aster-parser/src/builder/: expr.rs  mod.rs  position.rs  statements.rs
engine/aster-platform/: Cargo.toml
engine/aster-platform/src/: lib.rs  linux.rs  macos.rs  platform.rs  windows.rs
engine/aster-renderer/: Cargo.toml
engine/aster-renderer/examples/: integration_demo.rs  sprite_demo.rs  window_test.rs
engine/aster-renderer/src/: background_layer.rs  config.rs  frame_capture.rs  gpu_context.rs  layer_manager.rs  lib.rs  sprite_layer.rs  text_renderer.rs  texture.rs  typewriter.rs
engine/aster-renderer/src/shaders/: fullscreen_quad.wgsl  sprite.wgsl  text.wgsl
engine/aster-runtime/: Cargo.toml
engine/aster-runtime/examples/: load_minimal_project.rs  load_project.rs  verify_game_context.rs  window_demo.rs
engine/aster-runtime/src/: app.rs  command_bridge.rs  dialogue_controller.rs  error.rs  event_loop.rs  game_context.rs  game_loader.rs  game_manifest.rs  input_manager.rs  lib.rs  main.rs  renderer_impl.rs  scene_manager.rs
engine/aster-runtime/tests/: e2e_test.rs  error_path_test.rs  perf_bench_test.rs
engine/aster-save/: Cargo.toml
engine/aster-save/src/: lib.rs  save_manager.rs  save_ui.rs
engine/aster-save/tests/: integration_test.rs
engine/aster-ui/: Cargo.toml
engine/aster-ui/src/: lib.rs
engine/aster-vm/: Cargo.toml
engine/aster-vm/examples/: demo_ph1_t13.aster  prologue.aster  run_project.rs  run_scene.rs  scene_a.aster  scene_b.aster  scene_c.aster
engine/aster-vm/src/: action.rs  engine_command.rs  lib.rs  opcode.rs  vm.rs
ide/: .prettierrc  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
ide/src/: App.vue  main.ts  vite-env.d.ts
ide/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ide/src-tauri/capabilities/: default.json
ide/src-tauri/icons/: icon.icns
ide/src-tauri/src/: lib.rs  main.rs
ide/src/__tests__/: placeholder.test.ts
packager/: Cargo.toml
packager/src/: lib.rs  main.rs
templates/default_project/: .asterignore  aster.toml  build.toml  project.toml
templates/default_project/characters/: akane.asterchar  heroine.asterchar
templates/default_project/scripts/: prologue.aster
templates/default_project/scripts/chapter1/: library.aster  sakura_road.aster
