# Asterism — 打包工具 CLI
# 文件路径：packager/Cargo.toml
# 功能概述：独立 CLI 工具 crate 清单 — 负责将游戏项目编译、归档、生成安装包
# 作者：Claude (AI)
# 创建日期：2026-06-13

[package]
name = "aster-pack"
version = "0.1.0"
description = "Asterism — 游戏项目打包与分发 CLI 工具"
edition = "2024"
license = "MIT"

# 库入口 — 供 IDE 后端（Tauri Command）以库形式调用
[lib]
name = "aster_pack"
path = "src/lib.rs"

# CLI 入口 — 独立的命令行工具
[[bin]]
name = "aster-pack"
path = "src/main.rs"

[dependencies]
# 命令行参数解析 — derive 模式，声明式定义子命令和选项
clap = { version = "4", features = ["derive"] }

# 序列化 — 读取 project.toml 等 TOML 格式的项目配置文件
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# 错误处理 — 简化 CLI 应用的错误传播
anyhow = "1"

[dev-dependencies]
# 测试工具 — 快照测试与参数化测试
rstest = "0.24"
