[package]
name = "aster-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = ".aster 编译器 — 将 AST 编译为字节码，供 VM 执行"

[dependencies]
aster-core.workspace = true
bincode.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
aster-parser.workspace = true
