[package]
name = "aster-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "运行时集成 — 集成所有子系统，提供统一的游戏启动/运行/配置接口"

[dependencies]
aster-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
thiserror = { workspace = true }
