[package]
name = "aster-save"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "存档系统 — 存档/读档/CRC32 完整性校验"

[dependencies]
aster-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rmp-serde = "1.3"
crc32fast = "1.4"
chrono = "0.4"
image = { workspace = true }

[dev-dependencies]
tempfile = "3"
